<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBQ With friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chromecast_app_id">83D343F2</string>
    <string name="namespace">urn:x-cast:bbqwithfriends.unstableapps.com.bbqwithfriends</string>

    <string name="viewmyphotos">View My Photos</string>
    <string name="viewfriendsphotos">View Friends Photos</string>
    <string name="viewphotoscores">View Photo Scores</string>
    <string name="bigisbadtest">Big is Bad Test</string>
    <string name="smallisgoodtest">Small is Good Test</string>
    <string name="movealottest">Move a Lot Test</string>
    <string name="ignoretheedgetest">Ignore the Edge Test</string>

    <!-- Used in Error Dialog -->
    <string name="ok">OK</string>

    <!-- Title of the Error Dialog -->
    <string name="error">Error</string>

    <!-- Shown in VideoCastControllerActivity -->
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="loading">Loading&#8230;</string>

    <!-- Used in Router Controller Dialog -->
    <string name="no_media_info">No media information available</string>

    <!-- Session Recovery Dialog message -->
    <string name="session_reconnection_attempt">Attempting to recover previous session&#8230;</string>
    <!-- onApplicationConnectionFailed() errors -->
    <string name="failed_to_launch_app">Failed to lauch application</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_find_app">The application you are trying to launch is not availabled on your Chromecast device</string>

    <!-- Failure to connect -->
    <string name="failed_to_connect">Could not connect to the device</string>

</resources>
