<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewmyphotos"
        android:id="@+id/btnViewMyPhotos"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewfriendsphotos"
        android:id="@+id/btnViewFriendsPhotos"
        android:layout_below="@+id/btnViewMyPhotos"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewphotoscores"
        android:id="@+id/btnViewPhotoScores"
        android:layout_below="@+id/btnViewFriendsPhotos"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Tests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@+id/btnViewPhotoScores"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigisbadtest"
        android:id="@+id/btnBigIsBad"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallisgoodtest"
        android:id="@+id/btnSmallIsGood"
        android:layout_below="@+id/btnBigIsBad"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignoretheedgetest"
        android:id="@+id/btnIgnoreTheEdge"
        android:layout_below="@+id/btnSmallIsGood"
        android:layout_alignParentStart="true" />


</RelativeLayout>
